Finished the wacky section with a puzzle using 5 var inputs and alerts with a few extras including a solutions page

--- a/Assignment-Expressions/Expressions_Wacky/solve.html
+++ b/Assignment-Expressions/Expressions_Wacky/solve.html
@@ -2,13 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Expressions Wacky</title>
-<script src="js/script.js"></script>
+<title>Equation</title>
 </head>
 
 <body>
-If you lost and would like to try again click <a href="index.html">Here</a>
-
-<p>If you would like to see the question click <a href="solve.html">Here</a></p>
+second number * fifth number + third number / forth number - first number = total
+<p> Click <a href="index.html">Here</a> to go back!
 </body>
 </html>
+ 
