--- a/Assignment Functions/Functions_Industry/index.html
+++ b/Assignment Functions/Functions_Industry/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>How Long Will it Take to Build a Site?</title>
 <script src="js/script.js"></script>
 </head>
 
